# sailfish-sdcard-info

./: CMakeLists.txt  README  TODO  main.cpp  sdcard-info.json.in
qml/: CMakeLists.txt  Main.qml
rpm/: sailfish-sdcard-info.spec
